# logger

./: .env.example  AGENTS.md  Cargo.toml  NOTES.md  README.md  docker-compose.yml  init-topics.sh  scratch.rs  shell.nix  skills-lock.json
.agents/skills/speckit-analyze/: SKILL.md
.agents/skills/speckit-checklist/: SKILL.md
.agents/skills/speckit-clarify/: SKILL.md
.agents/skills/speckit-constitution/: SKILL.md
.agents/skills/speckit-implement/: SKILL.md
.agents/skills/speckit-plan/: SKILL.md
.agents/skills/speckit-specify/: SKILL.md
.agents/skills/speckit-tasks/: SKILL.md
.fresh/: windows.json
.specify/: extension-catalogs.yml  feature.json  preset-catalogs.yml
.specify/extensions/: .registry
.specify/extensions/.cache/: catalog-ebf165086500aab1-metadata.json  catalog-metadata.json
.specify/integrations/: agy.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/presets/: .registry
.specify/presets/.cache/: catalog-ff86b51b80a289e5-metadata.json  catalog-ff86b51b80a289e5.json  catalog-metadata.json
.specify/templates/: plan-template.md
.specify/workflows/: workflow-registry.json
apps/src/: lib.rs  main.rs
apps/src/admin/: actors.rs  adapters.rs  logic.rs  mod.rs  models.rs
apps/src/ai_consumer/: actors.rs  adapters.rs  logic.rs  models.rs
apps/src/ai_tag_db/: actors.rs  adapters.rs  logic.rs  models.rs
apps/src/alert_consumer/: adapters.rs  config_loop.rs  logic.rs  models.rs  run_loop.rs
apps/src/db_writer/: actors.rs  adapters.rs  error.rs  logic.rs  mod.rs  traits.rs
apps/src/edge/: actors.rs  adapters.rs  logic.rs  models.rs
apps/src/normalization/: actors.rs  adapters.rs  logic.rs  models.rs
apps/src/ws/: auth.rs  handler.rs  ingestion.rs  models.rs
crates/axiom/: Cargo.toml
crates/axiom-derive/: Cargo.toml
crates/axiom-derive/src/: lib.rs
docs/: SWARM_ENTRYPOINT.md  api-contract.md  json-schema.json  schema.sql  tech-stack.md
docs-deprecated/adr/: 0001-redis-streams-for-message-queue.md  0002-timescaledb-for-log-storage.md  0003-redis-streams-for-websocket-broadcast.md  0004-asynchronous-ai-analysis.md  0005-ingestion-transport-protocol.md  0006-ingestion-api-auth-and-rate-limiting.md  0007-alert-dispatch-retry.md
docs-deprecated/blueprints/: AGENT_INSTRUCTIONS.md
docs-deprecated/issues/: 01-core-ingestion.md  04a-api-auth-rate-limiting.md  05-health-analytics.md  06-alert-retry-dlq.md
docs-deprecated/requirements/: CONTEXT.md  CONVENTIONS.md  FUNCTIONAL-REQUIREMENTS.md  NOTES.md  TECHNICAL-REQUIREMENTS.md
docs-deprecated/self/: CAVEATS.md  DATAFLOW.md
docs/infrastructure/: .env.example
docs/issues/: 02-live-stream-web-ui.md  03-telegram-alerting.md  04b-admin-ui-rbac-config.md  07-ai-pipeline.md
docs/requirements/: FEATURES.md  FORMATS.md
foo-consumer/: Cargo.toml
foo-consumer/src/: main.rs
logger/server/: Cargo.toml
logger/server/src/: main.rs
logrider/: .env  README.md  TODO.md  schema.json
logrider/persist/: docker-compose.yml  init-clickhouse.sql
logrider/pipelines/: TODO.md  ingest.yaml  persist.yaml
logrider/scripts/: test.sh
logrider/server/: TODO.md  dashboard.html  index.js  package-lock.json  package.json
proto2/: .env.example
specs/00-conventions/: 01-architecture-ddd.md  01-architecture-soa.md  02-rust-syntax-style.md  03-axiom-utilities.md  04-error-handling.md  05-testing-cucumber.md  06-ci-cd-devops.md  07-constitution-principles.md  README.md
specs/01-origin/: README-en.md  README-vi.md
specs/02-disambiguated/: 0001-clickhouse-over-standard-sql.md  0002-custom-rust-workers-for-ingestion.md  0006-attribute-projection-over-attribute-promotion.md  0007-event-driven-compacted-topic-for-live-stream.md  0008-clickhouse-native-ttl-for-retention.md  0009-sidecar-table-for-ai-metadata.md  0010-stateless-authorization-boundary.md  0011-dedicated-edge-receiver-service.md  0012-clickhouse-materialized-views-for-analytics.md  0013-alert-fingerprints-for-deterministic-deduplication.md  0014-dynamic-configuration-via-redis-pubsub.md  0015-delta-updates-on-log-status-topic.md  0016-deployment-model-single-binary-across-containers.md  0017-in-memory-materializer-for-websocket-scaling.md  0018-control-plane-configuration-architecture.md  0019-attribute-flattening-at-the-edge.md  0020-pipeline-fan-out-for-ai-consumer.md  0021-dead-letter-queue-for-poison-pills.md  README.md
specs/05-execution/: latest
tests/: admin_api.rs  ai_consumer.rs  ai_tag_db_projection.rs  alert_consumer.rs  db_writer.rs  edge_receiver.rs  private_key.pem  public_key.pem
tests/features/: admin_api.feature  ai_consumer.feature  ai_tag_db_projection.feature  alert_consumer.feature  db_writer.feature  edge_receiver.feature
tests/steps/: admin_steps.rs  ai_consumer_steps.rs  ai_tag_db_projection_steps.rs  alert_consumer_steps.rs  db_writer_steps.rs  edge_receiver_steps.rs  mod.rs
(+212 files in other folders)
