[workspace]
members = [
    "logger/axiom",
    "logger/axiom-derive",
    "logger/view",
    "logger/server",
]
exclude = [
    "proto2",
    "proto3"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/NTDuck/logger"
publish = false

[workspace.dependencies]
# Cross-cutting concerns, centralized

# Crates that we choose to marry
# See: https://blessed.rs/crates
anyhow = { version = "1.0.100", features = ["std"] }
async-trait = "0.1.89"
bon = "3.8.1"
bytes = "1.11.0"
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
once_cell = "1.21.3"
rayon = "1.11.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
tracing = "0.1.43"
vec1 = "1.12.1"

[workspace.lints.rust]
# See: https://doc.rust-lang.org/rustc/lints/listing/index.html

[workspace.lints.clippy]
# See: https://rust-lang.github.io/rust-clippy/master/index.html

[workspace.metadata.rust-analyzer]
# See: https://rust-analyzer.github.io/book/diagnostics.html
